src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@llvm14_tket.result.result_f64.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [8 x i8] c"foo_f64\00", align 1

define private void @_hl.main.1(double %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__rt__double_record_output(double %0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @0, i32 0, i32 0))
  ret void
}

declare void @__quantum__rt__double_record_output(double, i8*)
