src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@llvm14_tket2.result.result_bool.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [9 x i8] c"bool_int\00", align 1

define void @_hl.main.1({ i32, {}, {} } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = extractvalue { i32, {}, {} } %0, 0
  %2 = trunc i32 %1 to i1
  call void @__quantum__rt__bool_record_output(i1 %2, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @0, i32 0, i32 0))
  ret void
}

declare void @__quantum__rt__bool_record_output(i1, i8*)
