src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@pre-mem2reg@llvm14_tket.result.result_bool.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [9 x i8] c"bool_int\00", align 1

define private void @_hl.main.1(i1 %0) {
alloca_block:
  %"2_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"2_0", align 1
  %"2_01" = load i1, i1* %"2_0", align 1
  call void @__quantum__rt__bool_record_output(i1 %"2_01", i8* getelementptr inbounds ([9 x i8], [9 x i8]* @0, i32 0, i32 0))
  ret void
}

declare void @__quantum__rt__bool_record_output(i1, i8*)
